--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,4 +2,6 @@ add_subdirectory(lib)
 add_subdirectory(wjreader)
 add_subdirectory(wjwriter)
 add_subdirectory(wjelement)
+IF(WJE_BUILD_CLI)
 add_subdirectory(cli)
+ENDIF(WJE_BUILD_CLI)
